# my-keyring

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md
my-keyring-mobile/: Cargo.toml
my-keyring-mobile/android/: build.gradle  settings.gradle
my-keyring-mobile/android/app/: build.gradle  google-services.json
my-keyring-mobile/android/app/src/androidTest/java/eu/baysse/mykeyring/: ExampleInstrumentedTest.kt
my-keyring-mobile/android/app/src/main/: AndroidManifest.xml
my-keyring-mobile/android/app/src/main/java/eu/baysse/mykeyring/di/: AppModule.kt  MyApplication.kt
my-keyring-mobile/android/app/src/main/java/eu/baysse/mykeyring/firebase/: MyFirebaseMessagingService.kt
my-keyring-mobile/android/app/src/main/java/eu/baysse/mykeyring/helper/: EndPoints.kt  Init.kt  Resource.kt  RustGreeting.kt  SingleLiveEvent.kt  Utility.kt
my-keyring-mobile/android/app/src/main/java/eu/baysse/mykeyring/model/: AuthResponse.kt
my-keyring-mobile/android/app/src/main/java/eu/baysse/mykeyring/network/: ApiDataSource.kt  ApiService.kt  BaseDataSource.kt
my-keyring-mobile/android/app/src/main/java/eu/baysse/mykeyring/view/: MainActivity.kt
my-keyring-mobile/android/app/src/main/java/eu/baysse/mykeyring/viewmodel/: MainRepo.kt  MainViewModel.kt
my-keyring-mobile/android/app/src/main/res/drawable/: et_input_with_border.xml  ic_bell.xml  ic_mello.xml
my-keyring-mobile/android/app/src/main/res/layout/: activity_main.xml
my-keyring-mobile/android/app/src/main/res/values/: strings.xml
my-keyring-mobile/android/app/src/main/res/values-fr-rFR/: strings.xml
my-keyring-mobile/android/app/src/test/java/eu/baysse/mykeyring/: ExampleUnitTest.kt
my-keyring-mobile/android/gradle/wrapper/: gradle-wrapper.properties
my-keyring-mobile/src/: android.rs  error.rs  lib.rs
my-keyring-server/: Cargo.toml
my-keyring-server/src/: error.rs  lib.rs  middleware.rs  route.rs  sse.rs  stream.rs  timing.rs  utils.rs
my-keyring-server/src/api/: mod.rs
my-keyring-server/src/api/response/: mod.rs
my-keyring-server/src/guard/: mod.rs
my-keyring-server/src/middleware/: mod.rs
my-keyring-server/src/route/: api.rs  mod.rs
my-keyring-server/src/route/api/: id.rs
my-keyring-server/src/route/api/id/: mod.rs  response.rs
my-keyring-server/src/route/api/id/response/: mod.rs
my-keyring-server/src/timing/: mod.rs
my-keyring-shared/: Cargo.toml  build.rs
my-keyring-shared/src/: algo.rs  authentication.rs  crypt.rs  errors.rs  keys.rs  lib.rs  note.rs  request.rs  security.rs  tag.rs  totp.rs
my-keyring-shared/src/crypt/: message.rs  mod.rs
src/: lib.rs
