[package]
name = "my-keyring-server"
version = "0.1.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.actix-web]
version = "4.0.0-beta.6"
default-features = false
features = [
    "rustls"
]

[dependencies.actix-utils]
version = "3.0.0"

[dependencies.env_logger]
version = "0.8.3"

[dependencies.futures]
version = "0.3.14"

[dependencies.hkdf]
version = "0.11.0"

[dependencies.humantime]
version = "2.1.0"

[dependencies.log]
version = "0.4.14"
features = [
    "max_level_trace",
    "release_max_level_info",
]

[dependencies.my-keyring-shared]
path = "../my-keyring-shared"

[dependencies.once_cell]
version = "1.7.2"
features = [
    "parking_lot"
]

[dependencies.pretty_env_logger]
version = "0.4.0"

[dependencies.rand]
version = "0.6"

[dependencies.serde]
version = "1.0"
features = [
    "derive"
]

[dependencies.serde_json]
version = "1.0"

[dependencies.tokio]
version = "1.5"
features = [
    "rt-multi-thread"
]

[dependencies.ulid]
version = "0.4.1"
