[package]
name = "my-keyring-shared"
version = "0.0.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.base32]
version = "0.4.0"

[dependencies.ed448-goldilocks]
version = "0.8.2"

[dependencies.fnv]
version = "1.0.7"

[dependencies.hmac]
version = "0.10.1"

[dependencies.pbkdf2]
version = "0.7.3"

[dependencies.rand_core]
version = "0.6.2"

[dependencies.sha-1]
version = "0.9.4"

[dependencies.ulid]
version = "0.4.1"

[dependencies.x448]
version = "0.6.0"
