[package]
name = "my-keyring-shared"
version = "0.0.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.base32]
version = "0.4.0"

[dependencies.bincode]
version = "1.3.2"

[dependencies.c2-chacha]
version = "0.3.0"

[dependencies.ed448-goldilocks]
version = "0.7"

[dependencies.fnv]
version = "1.0.7"

[dependencies.hmac]
version = "0.10.1"

[dependencies.pbkdf2]
version = "0.7.3"

[dependencies.rand]
version = "0.7"

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sha-1]
version = "0.9.4"

[dependencies.sha2]
version = "0.9.3"

[dependencies.ulid]
version = "0.4.1"

[dependencies.x448]
version = "0.6.0"
