[package]
name = "my-keyring-shared"
version = "0.0.0"
authors = ["Lolo_32 <lol.b@free.fr>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.base32]
version = "0.4.0"

[dependencies.bincode]
version = "1.3.2"

[dependencies.blake3]
version = "0.3.7"
features = [
    "pure"
]

[dependencies.c2-chacha]
version = "0.3.0"

[dependencies.chacha20poly1305]
version = "0.8.0"
features = [
    "xchacha20poly1305"
]

[dependencies.ed448-goldilocks]
version = "0.7"

[dependencies.fnv]
version = "1.0.7"

[dependencies.hkdf]
version = "0.11.0"

[dependencies.hmac]
version = "0.10.1"

[dependencies.opaque-debug]
version = "0.3.0"

[dependencies.pbkdf2]
version = "0.7.3"

[dependencies.rand]
version = "0.7"

[dependencies.rand_core]
version = "0.5"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sha-1]
version = "0.9.4"

[dependencies.sha2]
version = "0.9.3"

[dependencies.siphasher]
version = "0.3.5"

[dependencies.subtle]
version = "2.4.0"

[dependencies.ulid]
version = "0.4.1"
features = [
    "serde"
]

[dependencies.x448]
version = "0.6.0"
